--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
 <!-- Search Bar -->
-<center>
-    <input type="text" id="searchInput" placeholder="Search posts..." oninput="searchPosts()">
-</center>
+
 <center> <h1 style="">BigBrain Jar</h1></center>   
 
 <center>   <div id="welcomeMessage"></div></center>  
@@ -49,7 +47,7 @@
 
     <!-- Post Form (Visible only when logged in) -->
     <div id="postForm" style="display: none;">
-        <h3>Create a Post</h3>
+        <h3 style="color:#ECFFF0">Create a Post</h3>
         <form>
             <textarea id="content" placeholder="Write your post here..." rows="4" cols="50"></textarea><br>
             <button type="submit" id="m">Post</button>
@@ -65,3 +63,6 @@
     <script src="app.js" type="module"></script>
 </body>
 </html>
+
+
+
