--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+     <link rel="icon" href="BBJ (1).png" type="image/jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BigBrain Jar</title>
@@ -63,6 +63,5 @@
     <script src="app.js" type="module"></script>
 </body>
 </html>
-
 
 
